--- a/app/src/main/res/layout/activity_new_game.xml
+++ b/app/src/main/res/layout/activity_new_game.xml
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="55dp"
+        android:layout_marginTop="52dp"
         android:text="@string/hostLabel"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,14 +36,16 @@
     <TextView
         android:id="@+id/PlayerNameViewServerNewGame"
         android:layout_width="256dp"
-        android:layout_height="41dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginLeft="28dp"
-        android:layout_marginTop="56dp"
+        android:layout_height="34dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="52dp"
         android:layout_marginEnd="54dp"
         android:layout_marginRight="54dp"
         android:text="TextView"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textView3"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 </android.support.constraint.ConstraintLayout>
