--- a/app/src/main/res/layout/activity_new_game.xml
+++ b/app/src/main/res/layout/activity_new_game.xml
@@ -79,13 +79,14 @@
         app:layout_constraintVertical_bias="0.483" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/startGameButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="61dp"
         android:layout_marginLeft="61dp"
         android:layout_marginEnd="109dp"
         android:layout_marginRight="109dp"
+        android:onClick="startGame"
         android:text="@string/startGameServerButton"
         app:layout_constraintBaseline_toBaselineOf="@+id/joinedPlayersLabel"
         app:layout_constraintEnd_toEndOf="parent"
