--- a/app/src/main/res/layout/activity_in_game.xml
+++ b/app/src/main/res/layout/activity_in_game.xml
@@ -36,6 +36,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
+        android:onClick="loseGame"
         android:text="@string/loseGameButtonText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
