--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -71,6 +71,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginEnd="162dp"
         android:layout_marginRight="162dp"
+        android:onClick="joinGame"
         android:text="@string/JoinGame_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
